test/e2e/testdata/xlistenerset-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xlistener-httproute
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    namespace: gateway-conformance-infra
    name: xlistener-set-http
    sectionName: extra-http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /xlistener
    backendRefs:
    - name: infra-backend-v1
      port: 8080
